# technicien-app

./: .gitignore  .prettierignore  .prettierrc  AUTO_UPDATE_SETUP.md  README.md  latest.json  package-lock.json  package.json  requirements.md  vite.config.ts
.cursor/rules/: instructions.mdc
.github/: instructions.md
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: alimentation_commands.rs  auth_commands.rs  bande_commands.rs  batiment_commands.rs  ferme_commands.rs  maladie_commands.rs  mod.rs  personnel_commands.rs  poussin_commands.rs  semaine_commands.rs  soin_commands.rs  suivi_quotidien_commands.rs  updater_commands.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: alimentation.rs  bande.rs  batiment.rs  ferme.rs  maladie.rs  mod.rs  personnel.rs  poussin.rs  semaine.rs  soin.rs  suivi_quotidien.rs  user.rs
src-tauri/src/repositories/: alimentation_repository.rs  bande_repository.rs  batiment_repository.rs  ferme_repository.rs  maladie_repository.rs  mod.rs  personnel_repository.rs  poussin_repository.rs  semaine_repository.rs  soin_repository.rs  suivi_quotidien_repository.rs  user_repository.rs
src-tauri/src/services/: auth_service.rs  bande_service.rs  ferme_service.rs  maladie_service.rs  mod.rs  personnel_service.rs  poussin_service.rs  semaine_service.rs  soin_service.rs
src/components/: AuthWrapper.tsx  AutoUpdateManager.tsx  (+3 more)
(+46 files in other folders)
